codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_view__tests__feedback_view_constrained_multiline.snap
---
source: tui/src/bottom_pane/feedback_view.rs
expression: "render_buffer(area, &buf)"
---
▌ Tell us more (bug)
▌
▌ ten
